test/parser/parameter_list.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:6: error: expected parameter declaration
fn f(: void {}

// CHECK: [[# @LINE + 1 ]]:7: error: expected ':'
fn f(x) -> void {}

// CHECK: [[# @LINE + 1 ]]:8: error: expected type specifier
fn f(x:) -> void {}

// CHECK: [[# @LINE + 1 ]]:9: error: expected type specifier
fn f(x: 1) -> void {}

// CHECK: [[# @LINE + 1 ]]:12: error: expected ')'
fn f(x: int: void {}

// CHECK: [[# @LINE + 1 ]]:14: error: expected parameter declaration
fn f(x: int, 2) -> void {}

// CHECK: [[# @LINE + 1 ]]:6: error: expected parameter declaration
fn f(,) -> void {}

fn trailingComma(x:int,) -> void {}
// CHECK: FunctionDecl: trailingComma -> void
// CHECK-NEXT:   ParamDecl: x:int
// CHECK-NEXT:   Block

fn trailingComma2(
    x:int, 
    y:int,
) -> void {}
// CHECK: FunctionDecl: trailingComma2 -> void
// CHECK-NEXT:   ParamDecl: x:int
// CHECK-NEXT:   ParamDecl: y:int
// CHECK-NEXT:   Block

fn f(x: int, y: int) -> void {}
// CHECK: FunctionDecl: f -> void
// CHECK-NEXT:   ParamDecl: x:int
// CHECK-NEXT:   ParamDecl: y:int
// CHECK-NEXT:   Block

fn main() -> void {}
